[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ADVise"
description = "Process and visualise anomalies from IPA introspection data."
readme = "README.rst"
dynamic = ["version"]
authors = [
  {name = "Matt Crees", email = "mattc@stackhpc.com"},
  {name = "Will Szumski", email = "will@stackhpc.com"},
]
license = {file = "LICENSE"}

classifiers = [
  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
]
