[metadata]
name = advise
license = apache
home-page = http://github.com/stackhpc/ADVise
description-file = README.rst
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Programming Language :: Python

[entry_points]
console_scripts =
    m2-convert = advise.mungetout.process:run
    m2-collect = advise.mungetout.collect:run
    m2-extract = advise.mungetout.extract:run
    m2-diff = advise.mungetout.diff:run
    m2-filter = advise.mungetout.filter:main
    m2-sink-ironic-name = advise.mungetout.sinks.name:main
    m2-sink-run = advise.mungetout.sinks.run:main
    advise-process = advise.advise:main
    advise-visualise = advise.visualise:main

[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of target directory
# and source location from the root of the repository:
packages =
    advise

[test]
# py.test options when running `python setup.py test`
addopts = tests
